tests/interpreter/pass/007-let-shadow.hyg
let x: int = 1;
{
   let x: int = 41 + x;
   assert(x = 42)
}
assert(x = 1)
