tests/interpreter/fail/029-array-element-read-out-of-bounds.hyg
let arr: array {int} = array(2, 1);
let arr2: array {int} = array(2, 1);
let x: int = arrayElem(arr, 2);

assert(x = 0)